# ComfyUI-IG-Motion-I2V

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
animation/data/: dataset.py
animation/ip_adapter/: __init__.py  attention_processor.py  ip_adapter.py  utils.py
animation/models/: attention.py  forward_motion_module.py  forward_unet.py  forward_unet_blocks.py  motion_module.py  softsplat.py  unet.py  unet_blocks.py
animation/pipelines/: pipeline_animation.py
animation/utils/: convert_lora_safetensor_to_diffusers.py  util.py
common/: constants.py  tree.py  utils.py
examples/: MI2V-Painter.json  MI2V-to-ADLCM.json
flowgen/data/: dataset.py
flowgen/models/: attention.py  forward_motion_module.py  forward_unet.py  forward_unet_blocks.py  motion_module.py  resnet.py  unet.py  unet3d.py  unet_blocks.py
flowgen/pipelines/: pipeline_bi_flow_gen.py  pipeline_bi_single_flow_gen.py  pipeline_flow_gen.py  pipeline_single_flow_gen.py
nodes/: flow.py  motion_painter.py
web/: motion_painter.js
web/lib/painternode/: helpers.js
