[project]
name = "comfyui-ig-motion-i2v"
description = "ComfyUI adaptation of https://github.com/G-U-N/Motion-I2V"
version = "0.6.3"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/IDGallagher/ComfyUI-IG-Motion-I2V"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "iggy101"
DisplayName = "ComfyUI-IG-Motion-I2V"
Icon = ""
